# sample_wav_maker

./: .gitignore  Cargo.toml  README.md  test.bat
src/: basic_wave.rs  create_wave.rs  error.rs  main.rs
