[package]
name = "sample_wav_maker"
version = "0.1.0"
authors = ["Yoshiyuki Koyama <58644862+yoshiyuki-koyama@users.noreply.github.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wav_f64vec = { git = "https://github.com/yoshiyuki-koyama/wav_f64vec.git", tag = "v0.3.0" }